apps/pong/pong-client-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pong-client
spec:
  selector:
    app.kubernetes.io/name: pong-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
