apps/pong/pong-server-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pong-server
spec:
  selector:
    app.kubernetes.io/name: pong-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
