apps/pong/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pong.lab.tintinho.net-0
spec:
  rules:
  - host: "pong.lab.tintinho.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pong-client
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pong.lab.tintinho.net-1
  annotations:
    traefik.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "pong.lab.tintinho.net"
    http:
      paths:
      - path: /game-server
        pathType: Exact
        backend:
          service:
            name: pong-server
            port:
              number: 80
